# Reversi-Game

./: CMakeLists.txt
src/: Board.cpp  Board.h  Chips.h  Game.cpp  Game.h  main.cpp
